c/examples/writing-a-c-compiler-tests/tests/chapter_7/valid/assign_to_self_2.c
int main(void) {
    int a = 3;
    {
        int a = a = 4;
    }
    return a;
}