c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_semantics/double_define_after_scope.c
int main(void) {
    int a = 3;
    {
        a = 5;
    }
    int a = 2;
    return a;
}